--- a/app/src/main/res/layout/child_fragment_w_todo_list.xml
+++ b/app/src/main/res/layout/child_fragment_w_todo_list.xml
@@ -58,6 +58,22 @@
                     app:layout_constraintStart_toEndOf="@id/tv_undone"
                     app:layout_constraintTop_toTopOf="parent" />
 
+                <TextView
+                    android:id="@+id/tv_edit"
+                    android:text="편집"
+                    android:layout_marginTop="4dp"
+                    android:layout_marginEnd="46dp"
+                    android:textStyle="normal"
+                    android:textSize="14sp"
+                    android:textColor="#6f6f6f"
+                    android:letterSpacing="-0.02"
+                    android:lineSpacingExtra="28sp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    />
+
                 <RelativeLayout
                     android:id="@+id/rl_no_undone_work"
                     android:layout_width="match_parent"
@@ -95,6 +111,7 @@
                     android:layout_marginTop="15dp"
                     android:layout_marginBottom="36dp"
                     android:overScrollMode="never"
+                    tools:listitem="@layout/item_rv_undone_check"
                     app:layout_constraintBottom_toBottomOf="@id/cl_top"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -142,6 +159,7 @@
                     android:background="@drawable/rectangle_light_gray_radius_7"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent">
+
                     <ImageView
                         android:layout_width="13dp"
                         android:layout_height="17dp"
@@ -150,6 +168,7 @@
                         android:layout_centerVertical="true"
                         android:layout_marginStart="7dp"
                         android:src="@drawable/ic_man_17_px"/>
+
                     <TextView
                         android:id="@+id/tv_done_person_cnt"
                         android:layout_width="wrap_content"
@@ -163,6 +182,7 @@
                         android:textColor="#6f6f6f"
                         android:letterSpacing="-0.02"
                         android:lineSpacingExtra="28sp"/>
+
                 </RelativeLayout>
 
                 <!-- 업무리스트가 비었을 때 레이아웃 -->
@@ -203,55 +223,7 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/rl_done_person_cnt" />
-
-                <!-- 인원수 확인 클릭 시 -->
-                <FrameLayout
-                    android:id="@+id/frame_layout_cnt_done_worker"
-                    android:layout_width="137dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="11dp"
-                    android:background="@drawable/bg_done_cnt_pop_up"
-                    app:layout_constraintEnd_toEndOf="@id/rl_done_person_cnt"
-                    app:layout_constraintTop_toBottomOf="@id/rl_done_person_cnt">
-
-                    <androidx.constraintlayout.widget.ConstraintLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
-
-                        <TextView
-                            android:id="@+id/tv_pop_up"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:textStyle="bold"
-                            android:textSize="14sp"
-                            android:textColor="#343434"
-                            android:letterSpacing="-0.02"
-                            android:lineSpacingExtra="-1sp"
-                            android:text="완료한 인원"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent"
-                            android:layout_marginTop="16dp"
-                            android:layout_marginStart="16dp"/>
-
-                        <androidx.recyclerview.widget.RecyclerView
-                            android:id="@+id/rv_done_worker_list"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="8dp"
-                            tools:listitem="@layout/item_rv_worker_cnt_pop_up"
-                            android:layout_marginBottom="16dp"
-                            app:layout_constraintStart_toStartOf="@id/tv_pop_up"
-                            app:layout_constraintTop_toBottomOf="@id/tv_pop_up"
-                            app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            android:layout_marginEnd="16dp"/>
-
-
-                    </androidx.constraintlayout.widget.ConstraintLayout>
-                </FrameLayout>
-
             </androidx.constraintlayout.widget.ConstraintLayout>
-
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
 
