--- a/app/src/main/res/layout/child_fragment_home_opened.xml
+++ b/app/src/main/res/layout/child_fragment_home_opened.xml
@@ -101,7 +101,7 @@
         android:text="오늘 근무자"/>
 
     <LinearLayout
-        android:id="@+id/ll_commute"
+        android:id="@+id/ll_worker_list"
         android:layout_width="match_parent"
         android:layout_height="71dp"
         android:layout_marginTop="15dp"
@@ -356,7 +356,7 @@
         android:letterSpacing="-0.02"
         android:lineSpacingExtra="-6sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/ll_commute"
+        app:layout_constraintTop_toBottomOf="@id/ll_worker_list"
         android:layout_marginStart="24dp"
         android:layout_marginTop="47dp"/>
 
@@ -367,7 +367,7 @@
         android:background="@drawable/ic_add_24_px"
         android:layout_marginEnd="32dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/ll_commute"
+        app:layout_constraintTop_toBottomOf="@id/ll_worker_list"
         android:layout_marginTop="48dp"/>
 
     <RelativeLayout
