--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -34,7 +34,9 @@
             @style/TextAppearance.BottomNavigationView.Inactive
         </item>
     </style>
+
     <style name="TextAppearance" />
+
     <style name="TextAppearance.BottomNavigationView" />
     <!-- inactive tab icon style -->
     <style name="TextAppearance.BottomNavigationView.Inactive">
@@ -47,7 +49,6 @@
         <item name="android:textSize">10sp</item>
         <item name="android:textStyle">bold</item>
     </style>
-
 
 
     <!-- BottomSheet Dialog Custom -->
@@ -108,6 +109,17 @@
     <style name="TabLayoutTextStyle">
         <item name="android:textSize">16sp</item>
         <item name="android:textStyle">bold</item>
+    </style>
+
+    <!-- 투명 액티비티 만들기 -->
+    <style name="Theme.Transparent" parent="Theme.AppCompat.DayNight.NoActionBar">
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:colorBackgroundCacheHint">@null</item>
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowAnimationStyle">@android:style/Animation</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="android:backgroundDimEnabled">true</item>
     </style>
 
 </resources>
