[FEAT] 근무자 홈 UI 연결 완료

--- a/app/src/main/res/layout/activity_home_today_todo_list.xml
+++ b/app/src/main/res/layout/activity_home_today_todo_list.xml
@@ -61,6 +61,7 @@
 
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tab_Layout"
+            android:animateLayoutChanges="true"
             android:layout_width="match_parent"
             android:layout_height="42dp"
             android:background="@drawable/custom_tab_bg"
