--- a/app/src/main/res/layout/child_fragment_home_w_opened.xml
+++ b/app/src/main/res/layout/child_fragment_home_w_opened.xml
@@ -142,12 +142,13 @@
                 />
 
             <ImageView
+                android:id="@+id/btn_del_pop_up"
                 android:layout_width="wrap_content"
                 android:layout_height="16dp"
                 android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
                 android:layout_marginEnd="6dp"
-                android:src="@drawable/ic_white_delete_24_px"/>
+                android:src="@drawable/ic_delete_whie_real_24"/>
 
 
         </RelativeLayout>
@@ -255,6 +256,7 @@
 
 
     <TextView
+        android:id="@+id/tv_today_todo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="오늘의 할 일"
@@ -268,23 +270,13 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="47dp"/>
 
-    <ImageButton
-        android:id="@+id/ibtn_add"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        android:background="@drawable/ic_add_24_px"
-        android:layout_marginEnd="32dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/ll_commute"
-        android:layout_marginTop="48dp"/>
-
     <RelativeLayout
         android:id="@+id/rl_together_bg"
         android:layout_width="match_parent"
         android:layout_height="117dp"
         android:background="@drawable/rectangle_fill_white_radius_20"
         android:layout_marginHorizontal="24dp"
-        app:layout_constraintTop_toBottomOf="@id/ibtn_add"
+        app:layout_constraintTop_toBottomOf="@id/tv_today_todo"
         android:layout_marginTop="14dp">
         <RelativeLayout
             android:id="@+id/rl_img"
@@ -363,6 +355,7 @@
     </RelativeLayout>
 
     <RelativeLayout
+        android:id="@+id/rl_personal_work"
         android:layout_width="match_parent"
         android:layout_height="117dp"
         android:background="@drawable/rectangle_fill_white_radius_20"
