--- a/app/src/main/res/layout/child_fragment_together.xml
+++ b/app/src/main/res/layout/child_fragment_together.xml
@@ -238,13 +238,13 @@
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="8dp"
+                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                             tools:listitem="@layout/item_rv_worker_cnt_pop_up"
                             android:layout_marginBottom="16dp"
                             app:layout_constraintStart_toStartOf="@id/tv_pop_up"
                             app:layout_constraintTop_toBottomOf="@id/tv_pop_up"
                             app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            android:layout_marginEnd="16dp"/>
+                            app:layout_constraintEnd_toEndOf="parent"/>
 
 
                     </androidx.constraintlayout.widget.ConstraintLayout>
