--- a/app/src/main/res/layout/item_rv_done_check_together.xml
+++ b/app/src/main/res/layout/item_rv_done_check_together.xml
@@ -41,6 +41,8 @@
         app:layout_constraintStart_toStartOf="@id/tv_title"
         app:layout_constraintTop_toBottomOf="@id/tv_title" />
 
+
+
     <CheckBox
         android:id="@+id/checkbox_finish"
         android:layout_width="22dp"
@@ -51,6 +53,17 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
+
+
+    <FrameLayout
+        android:id="@+id/frame_disable"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:layout_marginEnd="22dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:clickable="true"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
