--- a/app/src/main/res/layout/item_rv_undone_check.xml
+++ b/app/src/main/res/layout/item_rv_undone_check.xml
@@ -58,12 +58,14 @@
 
     <TextView
         android:id="@+id/tv_writer_and_date"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:visibility="gone"
         android:text="사장님 김형준 · 2021.10.21."
         android:textStyle="normal"
         android:textSize="11sp"
+        android:gravity="end"
+        android:paddingEnd="13dp"
         android:textColor="#a3a3a3"
         android:letterSpacing="-0.02"
         android:lineSpacingExtra="6sp"
