[STYLE]커뮤니티 관리자 메인화면 완성

--- a/app/src/main/res/layout/activity_add_personal_work_list.xml
+++ b/app/src/main/res/layout/activity_add_personal_work_list.xml
@@ -135,6 +135,7 @@
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_to_do_list"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 tools:listitem="@layout/item_rv_add_to_do"
