--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -82,6 +82,7 @@
         android:layout_marginHorizontal="24dp">
 
         <RelativeLayout
+            android:id="@+id/rl_alarm_set"
             android:layout_width="match_parent"
             android:layout_height="52dp"
             android:background="@drawable/rectangle_fill_white_radius_top_20">
@@ -170,6 +171,7 @@
         android:layout_marginHorizontal="24dp">
 
         <RelativeLayout
+            android:id="@+id/rl_notice_set"
             android:layout_width="match_parent"
             android:layout_height="52dp"
             android:background="@drawable/rectangle_fill_white_radius_top_20">
@@ -207,51 +209,17 @@
             </View>
         </LinearLayout>
 
+
         <RelativeLayout
+            android:id="@+id/rl_how_to_use_set"
             android:layout_width="match_parent"
             android:layout_height="52dp"
             android:background="@color/white">
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="이용약관 및 정책"
-                android:layout_marginStart="24dp"
-                android:layout_centerVertical="true"
-                android:textStyle="normal"
-                android:textSize="16sp"
-                android:textColor="#333333"
-                android:letterSpacing="-0.03"
-                android:fontFamily="@font/roboto_medium"/>
-
-            <ImageButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_arrow_more"
-                android:background="@android:color/transparent"
-                android:layout_alignParentEnd="true"
-                android:layout_marginEnd="24dp"/>
-        </RelativeLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/white">
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_marginHorizontal="24dp"
-                android:background="#e2e2e2">
-            </View>
-        </LinearLayout>
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="52dp"
-            android:background="@color/white">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="고객센터/문의사항"
+                android:text="서비스 이용약관"
                 android:layout_marginStart="24dp"
                 android:layout_centerVertical="true"
                 android:textStyle="normal"
@@ -310,5 +278,96 @@
         </RelativeLayout>
     </LinearLayout>
 
+    <TextView
+        android:id="@+id/tv_set_etc"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="기타"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/ll_info_service"
+        android:layout_marginTop="24dp"
+        android:layout_marginStart="24dp"
+        android:textStyle="bold"
+        android:textSize="13sp"
+        android:fontFamily="@font/roboto_bold"
+        android:textColor="#a3a3a3"
+        android:letterSpacing="-0.03" />
+
+    <LinearLayout
+        android:id="@+id/ll_set_etc"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_marginTop="14dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_set_etc"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginHorizontal="24dp">
+
+        <RelativeLayout
+            android:id="@+id/rl_logout_set"
+            android:layout_width="match_parent"
+            android:layout_height="52dp"
+            android:background="@drawable/rectangle_fill_white_radius_top_20">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="로그아웃"
+                android:layout_marginStart="24dp"
+                android:layout_centerVertical="true"
+                android:textStyle="normal"
+                android:textSize="16sp"
+                android:textColor="#333333"
+                android:letterSpacing="-0.03"
+                android:fontFamily="@font/roboto_medium"/>
+
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_arrow_more"
+                android:background="@android:color/transparent"
+                android:layout_alignParentEnd="true"
+                android:layout_marginEnd="24dp"/>
+        </RelativeLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/white">
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginHorizontal="24dp"
+                android:background="#e2e2e2">
+            </View>
+        </LinearLayout>
+
+        <RelativeLayout
+            android:id="@+id/rl_withdraw_set"
+            android:layout_width="match_parent"
+            android:layout_height="52dp"
+            android:background="@drawable/rectangle_fill_white_radius_bottom_20">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="회원탈퇴"
+                android:layout_marginStart="24dp"
+                android:layout_centerVertical="true"
+                android:textStyle="normal"
+                android:textSize="16sp"
+                android:textColor="#333333"
+                android:letterSpacing="-0.03"
+                android:fontFamily="@font/roboto_medium"/>
+
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_arrow_more"
+                android:background="@android:color/transparent"
+                android:layout_alignParentEnd="true"
+                android:layout_marginEnd="24dp"/>
+        </RelativeLayout>
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
