--- a/app/src/main/res/layout/activity_reset_pw.xml
+++ b/app/src/main/res/layout/activity_reset_pw.xml
@@ -47,6 +47,7 @@
             android:layout_width="match_parent"
             android:layout_height="20dp"
             android:background="@null"
+            style="@style/EditTextStyle"
             android:singleLine="true"
             android:layout_centerVertical="true"
             android:layout_marginStart="16dp"
@@ -57,7 +58,7 @@
             android:letterSpacing="-0.01"
             android:lineSpacingExtra="13sp"
             android:textColor="@color/customBlack"
-            android:textColorHint="#c8c8c8"
+            android:textColorHint="@color/hintTxtColor"
             android:textSize="16sp"
             android:textStyle="normal" />
 
@@ -88,6 +89,7 @@
             android:layout_width="match_parent"
             android:layout_height="20dp"
             android:singleLine="true"
+            style="@style/EditTextStyle"
             android:layout_centerVertical="true"
             android:layout_marginStart="16dp"
             android:hint="비밀번호 재입력"
@@ -98,7 +100,7 @@
             android:letterSpacing="-0.01"
             android:lineSpacingExtra="13sp"
             android:textColor="@color/customBlack"
-            android:textColorHint="#c8c8c8"
+            android:textColorHint="@color/hintTxtColor"
             android:textSize="16sp"
             android:textStyle="normal" />
 
@@ -113,16 +115,35 @@
 
     </RelativeLayout>
 
+    <TextView
+        android:id="@+id/warning_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="비밀번호가 일치하지 않습니다."
+        android:fontFamily="@font/roboto_medium"
+        android:textStyle="normal"
+        android:layout_marginTop="8dp"
+        android:layout_marginStart="8dp"
+        android:textSize="12sp"
+        android:textColor="#ff3b30"
+        android:letterSpacing="-0.01"
+        android:lineSpacingExtra="17sp"
+        android:visibility="invisible"
+        app:layout_constraintStart_toStartOf="@id/rl_confirm_pw"
+        app:layout_constraintTop_toBottomOf="@id/rl_confirm_pw"
+        />
+
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_next"
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:text="다음"
         android:background="@drawable/btn_disable_yellow_fill_rounded"
-        android:textColor="@color/white"
+        android:textColor="@color/disableTxtColor"
         android:stateListAnimator="@null"
         android:textStyle="bold"
         android:textSize="16sp"
+        android:enabled="false"
         android:fontFamily="@font/roboto_bold"
         android:layout_marginBottom="24dp"
         android:layout_marginHorizontal="24dp"
