[FEAT] 근무자 가입 api 연결 완료

--- a/app/src/main/res/layout/activity_on_boarding.xml
+++ b/app/src/main/res/layout/activity_on_boarding.xml
@@ -104,6 +104,7 @@
             android:layout_height="match_parent">
 
             <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btn_start"
                 android:layout_width="0dp"
                 android:layout_height="50dp"
                 android:text="시작하기"
