[FEAT] 관리자 이미지 업로드 완료

--- a/app/src/main/res/layout/fragment_m_mypage.xml
+++ b/app/src/main/res/layout/fragment_m_mypage.xml
@@ -38,7 +38,7 @@
                         android:id="@+id/profile_img"
                         android:layout_width="84dp"
                         android:layout_height="84dp"
-                        android:src="@drawable/img_profile_m_58_px_2" />
+                        tools:src="@drawable/img_profile_m_58_px_2" />
 
                     <ImageButton
                         android:id="@+id/ibtn_change_profile"
