--- a/app/src/main/res/layout/fragment_w_mypage.xml
+++ b/app/src/main/res/layout/fragment_w_mypage.xml
@@ -38,7 +38,7 @@
                         android:id="@+id/profile_img"
                         android:layout_width="84dp"
                         android:layout_height="84dp"
-                        android:src="@drawable/img_mypage_worker_default_profile" />
+                        tools:src="@drawable/img_mypage_worker_default_profile" />
 
                     <ImageButton
                         android:id="@+id/ibtn_change_profile"
