--- a/app/src/main/res/layout/fragment_card_info.xml
+++ b/app/src/main/res/layout/fragment_card_info.xml
@@ -44,7 +44,7 @@
                     android:layout_height="84dp"
                     android:layout_marginTop="8dp"
                     android:background="@null"
-                    android:src="@drawable/img_profile_48_px_none"
+                    tools:src="@drawable/img_profile_48_px_none"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/tv_rank" />
