--- a/app/src/main/res/layout/activity_select_day_list.xml
+++ b/app/src/main/res/layout/activity_select_day_list.xml
@@ -20,6 +20,7 @@
             android:background="@color/white">
 
             <ImageButton
+                android:id="@+id/btn_back"
                 android:layout_width="24dp"
                 android:layout_height="24dp"
                 android:layout_centerVertical="true"
@@ -35,7 +36,7 @@
                 android:layout_centerVertical="true"
                 android:gravity="center_horizontal"
                 android:letterSpacing="-0.03"
-                android:text="9/22 수요일 업무"
+                tools:text="9/22 수요일 업무"
                 android:textColor="#000000"
                 android:textSize="18sp"
                 android:textStyle="bold" />
